--- a/index.html
+++ b/index.html
@@ -6,6 +6,111 @@
     <title>Zoom</title>
     <link rel="stylesheet" href="./assets/style.css">
 </head>
-<body>
+<body class="debug">
+    <header>
+
+    </header>
+    <!-- /header -->
+    <main>
+        <div class="container">     
+            <div class="row">
+                <div class="user-card">
+                    <img src="https://picsum.photos/200" alt="">
+                </div>
+                <div class="user-card">
+                    <img src="https://picsum.photos/200" alt="">
+                </div>
+                <div class="user-card">
+                    <img src="https://picsum.photos/200" alt="">
+                </div>
+                <div class="user-card">
+                    <img src="https://picsum.photos/200" alt="">
+                </div>
+                <div class="user-card">
+                    <img src="https://picsum.photos/200" alt="">
+                </div>
+                <div class="user-card">
+                    <img src="https://picsum.photos/200" alt="">
+                </div>
+                <div class="user-card">
+                    <img src="https://picsum.photos/200" alt="">
+                </div>
+                <div class="user-card">
+                    <img src="https://picsum.photos/200" alt="">
+                </div>
+                <div class="user-card">
+                    <img src="https://picsum.photos/200" alt="">
+                </div>
+                <div class="user-card">
+                    <img src="https://picsum.photos/200" alt="">
+                </div>
+                <div class="user-card">
+                    <img src="https://picsum.photos/200" alt="">
+                </div>
+                <div class="user-card">
+                    <img src="https://picsum.photos/200" alt="">
+                </div>
+                <div class="user-card">
+                    <img src="https://picsum.photos/200" alt="">
+                </div>
+                <div class="user-card">
+                    <img src="https://picsum.photos/200" alt="">
+                </div>
+                <div class="user-card">
+                    <img src="https://picsum.photos/200" alt="">
+                </div>
+                <div class="user-card">
+                    <img src="https://picsum.photos/200" alt="">
+                </div>
+                <div class="user-card">
+                    <img src="https://picsum.photos/200" alt="">
+                </div>
+                <div class="user-card">
+                    <img src="https://picsum.photos/200" alt="">
+                </div>
+                <div class="user-card">
+                    <img src="https://picsum.photos/200" alt="">
+                </div>
+                <div class="user-card">
+                    <img src="https://picsum.photos/200" alt="">
+                </div>
+                <div class="user-card">
+                    <img src="https://picsum.photos/200" alt="">
+                </div>
+                <div class="user-card">
+                    <img src="https://picsum.photos/200" alt="">
+                </div>
+                <div class="user-card">
+                    <img src="https://picsum.photos/200" alt="">
+                </div>
+                <div class="user-card">
+                    <img src="https://picsum.photos/200" alt="">
+                </div>
+                <div class="user-card">
+                    <img src="https://picsum.photos/200" alt="">
+                </div>
+                <div class="user-card">
+                    <img src="https://picsum.photos/200" alt="">
+                </div>
+                <div class="user-card">
+                    <img src="https://picsum.photos/200" alt="">
+                </div>
+                <div class="user-card">
+                    <img src="https://picsum.photos/200" alt="">
+                </div>
+                <div class="user-card">
+                    <img src="https://picsum.photos/200" alt="">
+                </div>
+                <div class="user-card">
+                    <img src="https://picsum.photos/200" alt="">
+                </div>
+            </div>
+        </div>
+    </main>
+    <!-- /main -->
+    <footer>
+        <div class="play-bar"></div>
+    </footer>
+    <!-- /footer -->
 </body>
 </html>
