fix main and root color

--- a/index.html
+++ b/index.html
@@ -111,6 +111,21 @@
                 <div class="user-card">
                     <img src="https://picsum.photos/200" alt="">
                 </div>
+                <div class="user-card">
+                    <img src="https://picsum.photos/200" alt="">
+                </div>
+                <div class="user-card">
+                    <img src="https://picsum.photos/200" alt="">
+                </div>
+                <div class="user-card">
+                    <img src="https://picsum.photos/200" alt="">
+                </div>
+                <div class="user-card">
+                    <img src="https://picsum.photos/200" alt="">
+                </div>
+                <div class="user-card">
+                    <img src="https://picsum.photos/200" alt="">
+                </div>
             </div>
         </div>
     </main>
