fix user card and add structure to footer

--- a/index.html
+++ b/index.html
@@ -23,115 +23,295 @@
             <div class="row">
                 <div class="user-card">
                     <img src="https://picsum.photos/200" alt="">
+                    <div class="micro-off p-abso">
+                        <i class="fa-solid fa-microphone-slash">
+                        </i>
+                         Pinco Pallo
+                    </div>
                 </div>
                 <div class="user-card">
                     <img src="https://picsum.photos/200" alt="">
+                    <div class="micro-off p-abso">
+                        <i class="fa-solid fa-microphone-slash">
+                        </i>
+                         Pinco Pallo
+                    </div>
                 </div>
                 <div class="user-card">
                     <img src="https://picsum.photos/200" alt="">
+                    <div class="micro-off p-abso">
+                        <i class="fa-solid fa-microphone-slash">
+                        </i>
+                         Pinco Pallo
+                    </div>
                 </div>
                 <div class="user-card">
                     <img src="https://picsum.photos/200" alt="">
+                    <div class="micro-off p-abso">
+                        <i class="fa-solid fa-microphone-slash">
+                        </i>
+                         Pinco Pallo
+                    </div>
                 </div>
                 <div class="user-card">
                     <img src="https://picsum.photos/200" alt="">
+                    <div class="micro-off p-abso">
+                        <i class="fa-solid fa-microphone-slash">
+                        </i>
+                         Pinco Pallo
+                    </div>
                 </div>
                 <div class="user-card">
                     <img src="https://picsum.photos/200" alt="">
+                    <div class="micro-off p-abso">
+                        <i class="fa-solid fa-microphone-slash">
+                        </i>
+                         Pinco Pallo
+                    </div>
                 </div>
                 <div class="user-card">
                     <img src="https://picsum.photos/200" alt="">
+                    <div class="micro-off p-abso">
+                        <i class="fa-solid fa-microphone-slash">
+                        </i>
+                         Pinco Pallo
+                    </div>
                 </div>
                 <div class="user-card">
                     <img src="https://picsum.photos/200" alt="">
+                    <div class="micro-off p-abso">
+                        <i class="fa-solid fa-microphone-slash">
+                        </i>
+                         Pinco Pallo
+                    </div>
                 </div>
                 <div class="user-card">
                     <img src="https://picsum.photos/200" alt="">
+                    <div class="micro-off p-abso">
+                        <i class="fa-solid fa-microphone-slash">
+                        </i>
+                         Pinco Pallo
+                    </div>
                 </div>
                 <div class="user-card">
                     <img src="https://picsum.photos/200" alt="">
+                    <div class="micro-off p-abso">
+                        <i class="fa-solid fa-microphone-slash">
+                        </i>
+                         Pinco Pallo
+                    </div>
                 </div>
                 <div class="user-card">
                     <img src="https://picsum.photos/200" alt="">
+                    <div class="micro-off p-abso">
+                        <i class="fa-solid fa-microphone-slash">
+                        </i>
+                         Pinco Pallo
+                    </div>
                 </div>
                 <div class="user-card">
                     <img src="https://picsum.photos/200" alt="">
+                    <div class="micro-off p-abso">
+                        <i class="fa-solid fa-microphone-slash">
+                        </i>
+                         Pinco Pallo
+                    </div>
                 </div>
                 <div class="user-card">
                     <img src="https://picsum.photos/200" alt="">
+                    <div class="micro-off p-abso">
+                        <i class="fa-solid fa-microphone-slash">
+                        </i>
+                         Pinco Pallo
+                    </div>
                 </div>
                 <div class="user-card">
                     <img src="https://picsum.photos/200" alt="">
+                    <div class="micro-off p-abso">
+                        <i class="fa-solid fa-microphone-slash">
+                        </i>
+                         Pinco Pallo
+                    </div>
                 </div>
                 <div class="user-card">
                     <img src="https://picsum.photos/200" alt="">
+                    <div class="micro-off p-abso">
+                        <i class="fa-solid fa-microphone-slash">
+                        </i>
+                         Pinco Pallo
+                    </div>
                 </div>
                 <div class="user-card">
                     <img src="https://picsum.photos/200" alt="">
+                    <div class="micro-off p-abso">
+                        <i class="fa-solid fa-microphone-slash">
+                        </i>
+                         Pinco Pallo
+                    </div>
                 </div>
                 <div class="user-card">
                     <img src="https://picsum.photos/200" alt="">
+                    <div class="micro-off p-abso">
+                        <i class="fa-solid fa-microphone-slash">
+                        </i>
+                         Pinco Pallo
+                    </div>
                 </div>
                 <div class="user-card">
                     <img src="https://picsum.photos/200" alt="">
+                    <div class="micro-off p-abso">
+                        <i class="fa-solid fa-microphone-slash">
+                        </i>
+                         Pinco Pallo
+                    </div>
                 </div>
                 <div class="user-card">
                     <img src="https://picsum.photos/200" alt="">
+                    <div class="micro-off p-abso">
+                        <i class="fa-solid fa-microphone-slash">
+                        </i>
+                         Pinco Pallo
+                    </div>
                 </div>
                 <div class="user-card">
                     <img src="https://picsum.photos/200" alt="">
+                    <div class="micro-off p-abso">
+                        <i class="fa-solid fa-microphone-slash">
+                        </i>
+                         Pinco Pallo
+                    </div>
                 </div>
                 <div class="user-card">
                     <img src="https://picsum.photos/200" alt="">
+                    <div class="micro-off p-abso">
+                        <i class="fa-solid fa-microphone-slash">
+                        </i>
+                         Pinco Pallo
+                    </div>
                 </div>
                 <div class="user-card">
                     <img src="https://picsum.photos/200" alt="">
+                    <div class="micro-off p-abso">
+                        <i class="fa-solid fa-microphone-slash">
+                        </i>
+                         Pinco Pallo
+                    </div>
                 </div>
                 <div class="user-card">
                     <img src="https://picsum.photos/200" alt="">
+                    <div class="micro-off p-abso">
+                        <i class="fa-solid fa-microphone-slash">
+                        </i>
+                         Pinco Pallo
+                    </div>
                 </div>
                 <div class="user-card">
                     <img src="https://picsum.photos/200" alt="">
+                    <div class="micro-off p-abso">
+                        <i class="fa-solid fa-microphone-slash">
+                        </i>
+                         Pinco Pallo
+                    </div>
                 </div>
                 <div class="user-card">
                     <img src="https://picsum.photos/200" alt="">
+                    <div class="micro-off p-abso">
+                        <i class="fa-solid fa-microphone-slash">
+                        </i>
+                         Pinco Pallo
+                    </div>
                 </div>
                 <div class="user-card">
                     <img src="https://picsum.photos/200" alt="">
+                    <div class="micro-off p-abso">
+                        <i class="fa-solid fa-microphone-slash">
+                        </i>
+                         Pinco Pallo
+                    </div>
                 </div>
                 <div class="user-card">
                     <img src="https://picsum.photos/200" alt="">
+                    <div class="micro-off p-abso">
+                        <i class="fa-solid fa-microphone-slash">
+                        </i>
+                         Pinco Pallo
+                    </div>
                 </div>
                 <div class="user-card">
                     <img src="https://picsum.photos/200" alt="">
+                    <div class="micro-off p-abso">
+                        <i class="fa-solid fa-microphone-slash">
+                        </i>
+                         Pinco Pallo
+                    </div>
                 </div>
                 <div class="user-card">
                     <img src="https://picsum.photos/200" alt="">
+                    <div class="micro-off p-abso">
+                        <i class="fa-solid fa-microphone-slash">
+                        </i>
+                         Pinco Pallo
+                    </div>
                 </div>
                 <div class="user-card">
                     <img src="https://picsum.photos/200" alt="">
+                    <div class="micro-off p-abso">
+                        <i class="fa-solid fa-microphone-slash">
+                        </i>
+                         Pinco Pallo
+                    </div>
                 </div>
                 <div class="user-card">
                     <img src="https://picsum.photos/200" alt="">
+                    <div class="micro-off p-abso">
+                        <i class="fa-solid fa-microphone-slash">
+                        </i>
+                         Pinco Pallo
+                    </div>
                 </div>
                 <div class="user-card">
                     <img src="https://picsum.photos/200" alt="">
+                    <div class="micro-off p-abso">
+                        <i class="fa-solid fa-microphone-slash">
+                        </i>
+                         Pinco Pallo
+                    </div>
                 </div>
                 <div class="user-card">
                     <img src="https://picsum.photos/200" alt="">
+                    <div class="micro-off p-abso">
+                        <i class="fa-solid fa-microphone-slash">
+                        </i>
+                         Pinco Pallo
+                    </div>
                 </div>
                 <div class="user-card">
                     <img src="https://picsum.photos/200" alt="">
+                    <div class="micro-off p-abso">
+                        <i class="fa-solid fa-microphone-slash">
+                        </i>
+                         Pinco Pallo
+                    </div>
                 </div>
                 <div class="user-card">
                     <img src="https://picsum.photos/200" alt="">
+                    <div class="micro-off p-abso">
+                        <i class="fa-solid fa-microphone-slash">
+                        </i>
+                         Pinco Pallo
+                    </div>
                 </div>
+
             </div>
         </div>
     </main>
     <!-- /main -->
     <footer>
-        <div class="play-bar"></div>
+        <div class="tool-bar d-flex">
+            <div class="left-footer d-flex j-start">ciao</div>
+            <div class="center-footer d-flex j-center">ciaociaociao</div>
+            <div class="right-footer d-flex j-end">ciao</div>
+        </div>
     </footer>
     <!-- /footer -->
 </body>
