add content to left footer and center footer

--- a/index.html
+++ b/index.html
@@ -308,9 +308,57 @@
     <!-- /main -->
     <footer>
         <div class="tool-bar d-flex">
-            <div class="left-footer d-flex j-start">ciao</div>
-            <div class="center-footer d-flex j-center">ciaociaociao</div>
-            <div class="right-footer d-flex j-end">ciao</div>
+            <div class="left-footer d-flex x-start">
+                <div class="items">
+                    <i class="fa-solid fa-microphone fa-xl"></i>
+                    <div class="text-icon">Mute</div>
+                </div>
+                <div class="items">
+                    <i class="fa-solid fa-video fa-xl"></i>
+                    <div class="text-icon">Stop Video</div>
+                </div>
+                <div>
+                    <i class="fa-solid fa-chevron-up fa-xs"></i>
+                </div>
+            </div>
+            <div class="center-footer d-flex">
+                <div class="items">
+                    <i class="fa-solid fa-user-plus fa-xl"></i>
+                    <div class="text-icon">Invite</div>
+                </div>    
+                <div class="items">
+                    <i class="fa-solid fa-people-roof fa-xl"></i>
+                    <div class="text-icon">Manage Participants</div>
+                </div>
+                <div class="items">
+                    <i class="fa-solid fa-square-poll-vertical fa-xl"></i>
+                    <div class="text-icon">Polling</div>
+                </div>
+                <div class="items">
+                    <i class="fa-solid fa-share-from-square fa-xl success-color"></i>
+                    <div class="text-icon">Share Screen</div>
+                </div>
+                <div>
+                    <i class="fa-solid fa-chevron-up fa-xs"></i>
+                </div> 
+                <div class="items">
+                    <i class="fa-solid fa-comment fa-xl"></i>
+                    <div class="text-icon">Chat</div>
+                </div>
+                <div class="items">
+                    <i class="fa-solid fa-record-vinyl fa-xl"></i>
+                    <div class="text-icon">Record</div>
+                </div>
+                <div class="items">
+                    <i class="fa-solid fa-table-cells-large fa-xl"></i>
+                    <div class="text-icon">Breakout Rooms</div>
+                </div>
+                <div class="items">
+                    <i class="fa-solid fa-ellipsis fa-xl"></i>
+                    <div class="text-icon">More</div>
+                </div>
+            </div>
+            <div class="right-footer d-flex">ciao</div>
         </div>
     </footer>
     <!-- /footer -->
