add right footer content
qui ho utilizzato un metodo di centratura verticale (forse) non idoneo.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./assets/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
-<body class="debug">
+<body class="">
     <header>
         <span>
             <i class="fa-solid fa-table-cells"></i>
@@ -313,6 +313,9 @@
                     <i class="fa-solid fa-microphone fa-xl"></i>
                     <div class="text-icon">Mute</div>
                 </div>
+                <div>
+                    <i class="fa-solid fa-chevron-up fa-xs"></i>
+                </div>
                 <div class="items">
                     <i class="fa-solid fa-video fa-xl"></i>
                     <div class="text-icon">Stop Video</div>
@@ -321,6 +324,7 @@
                     <i class="fa-solid fa-chevron-up fa-xs"></i>
                 </div>
             </div>
+            <!-- /.left-footer -->
             <div class="center-footer d-flex">
                 <div class="items">
                     <i class="fa-solid fa-user-plus fa-xl"></i>
@@ -358,8 +362,15 @@
                     <div class="text-icon">More</div>
                 </div>
             </div>
-            <div class="right-footer d-flex">ciao</div>
+            <!-- /.center-footer -->
+            <div class="right-footer d-flex">
+                <div class="end-meeting">
+                    End meeting
+                </div>
+            </div>
+            <!-- /.right-footer -->
         </div>
+        <!-- /.tool-bar -->
     </footer>
     <!-- /footer -->
 </body>
