add button style

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 </head>
 <body class="">
     <header>
-        <span>
+        <button class="btn">
             <i class="fa-solid fa-table-cells"></i>
             Speaker View
-        </span>
-        <span>
+        </button>
+        <button class="btn">
             <i class="fa-solid fa-maximize"></i>
-        </span>
+        </button>
     </header>
     <!-- /header -->
     <main>
@@ -364,9 +364,7 @@
             </div>
             <!-- /.center-footer -->
             <div class="right-footer d-flex">
-                <div class="end-meeting">
-                    End meeting
-                </div>
+                <button class="btn">End meeting</button> 
             </div>
             <!-- /.right-footer -->
         </div>
